# rustyalias

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.aarch  README.md  compose.yaml  demo.tape
.github/: dependabot.yml
.github/workflows/: main.yaml  tests.yaml
src/: config.rs  main.rs  rate_limit.rs
src/dns/: ip_parser.rs  mod.rs  query.rs  response.rs
strace/: Dockerfile  Dockerfile.aarch  README.md  deployment.yaml  kind-config.yaml  service.yaml
strace/profiles/: seccomp-profile.json
